add cycle, sync mode

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <div id="rainbow-settings">
                     <select name="rainbow_effect" id="rainbow_effect">
                         <option value="rainbow">Rainbow</option>
-                        <option value="wave">Wave</option>
+                        <option value="cycle">Cycle</option>
                         <option value="sync">Sync</option>
                     </select><br><br>
 
